--- a/g5Mindr/g5Mindr/XIBs/g5LocationConditionViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5LocationConditionViewController.xib
@@ -40,9 +40,9 @@
                     <rect key="frame" x="0.0" y="109" width="600" height="491"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PL7-Gf-OQ2">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PL7-Gf-OQ2">
                     <rect key="frame" x="0.0" y="109" width="600" height="491"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
