--- a/g5Mindr/g5Mindr/Base.lproj/LaunchScreen.storyboard
+++ b/g5Mindr/g5Mindr/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Proxima Nova Soft W03 Bold.ttf">
+            <string>ProximaNovaSoftW03-Bold</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -13,14 +19,53 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="KoX-Fs-Yge">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BUOY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ewK-bN-Kej">
+                                <rect key="frame" x="146" y="576" width="122" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="SDU-o5-WSw"/>
+                                    <constraint firstAttribute="width" constant="122" id="qqG-uf-TxL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ProximaNovaSoftW03-Bold" family="ProximaNovaSoftW03-Bold" pointSize="35"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="KoX-Fs-Yge" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="0B2-rd-PgZ"/>
+                            <constraint firstItem="KoX-Fs-Yge" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="160" id="Bt1-k3-9fQ"/>
+                            <constraint firstItem="KoX-Fs-Yge" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="216" id="GTv-yF-Qqk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KoX-Fs-Yge" secondAttribute="trailing" id="dBs-Ug-2aP"/>
+                            <constraint firstAttribute="trailing" secondItem="KoX-Fs-Yge" secondAttribute="trailing" id="giV-VT-nUl"/>
+                            <constraint firstItem="ewK-bN-Kej" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="j9r-cA-FkM"/>
+                            <constraint firstItem="KoX-Fs-Yge" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="jlp-8k-Q9W"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="KoX-Fs-Yge" secondAttribute="bottom" constant="236" id="ka4-Yl-QnM"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="KoX-Fs-Yge" secondAttribute="bottom" id="ksL-sw-iIK"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="ewK-bN-Kej" secondAttribute="bottom" constant="125" id="tH4-ye-1mX"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Bt1-k3-9fQ"/>
+                                <exclude reference="GTv-yF-Qqk"/>
+                                <exclude reference="dBs-Ug-2aP"/>
+                                <exclude reference="ka4-Yl-QnM"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background" width="375" height="667"/>
+    </resources>
 </document>
