--- a/g5Mindr/g5Mindr/Cells/g5ReminderTableViewCell.xib
+++ b/g5Mindr/g5Mindr/Cells/g5ReminderTableViewCell.xib
@@ -15,22 +15,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="g5ReminderTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="g5ReminderTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcq-Nq-pFF">
-                        <rect key="frame" x="0.0" y="78" width="320" height="1"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcq-Nq-pFF" userLabel="Separator View">
+                        <rect key="frame" x="0.0" y="98" width="320" height="1"/>
                         <color key="backgroundColor" red="0.36078431370000003" green="0.47843137250000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="mC6-x4-MGK"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7h1-73-PQF" userLabel="onSwitch" customClass="OnSwitchView">
-                        <rect key="frame" x="263" y="24" width="49" height="31"/>
+                        <rect key="frame" x="263" y="34" width="49" height="31"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="31" id="hLz-pA-v55"/>
@@ -38,51 +38,51 @@
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Puf-S3-x1i">
-                        <rect key="frame" x="263" y="24" width="49" height="31"/>
+                        <rect key="frame" x="263" y="34" width="49" height="31"/>
                         <connections>
                             <action selector="didPressSwitchButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="MmL-KH-sdF"/>
                         </connections>
                     </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bSO-Ql-iwT" userLabel="Outer Ring">
-                        <rect key="frame" x="20" y="13" width="54" height="54"/>
+                        <rect key="frame" x="20" y="30" width="40" height="40"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="54" id="EF5-qP-9Ns"/>
-                            <constraint firstAttribute="width" constant="54" id="PzN-6g-iMW"/>
+                            <constraint firstAttribute="height" constant="40" id="EF5-qP-9Ns"/>
+                            <constraint firstAttribute="width" constant="40" id="PzN-6g-iMW"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U8B-4d-JaB" userLabel="Inner Ring">
-                        <rect key="frame" x="25" y="18" width="44" height="44"/>
+                        <rect key="frame" x="24" y="34" width="32" height="32"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="JWJ-34-Uc9"/>
-                            <constraint firstAttribute="width" constant="44" id="Wra-Jo-z4i"/>
+                            <constraint firstAttribute="height" constant="32" id="JWJ-34-Uc9"/>
+                            <constraint firstAttribute="width" constant="32" id="Wra-Jo-z4i"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkn-qA-4Bq">
-                        <rect key="frame" x="82" y="40" width="173" height="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="O" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jAu-Pl-I9w" userLabel="Emoticon Label">
+                        <rect key="frame" x="28" y="38" width="24" height="24"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="bnv-pf-9Yq"/>
+                            <constraint firstAttribute="height" constant="24" id="D2r-y7-6k8"/>
+                            <constraint firstAttribute="width" constant="24" id="l1J-De-dj8"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkn-qA-4Bq">
+                        <rect key="frame" x="75" y="55" width="180" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="bnv-pf-9Yq"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="ProximaNovaSoftW03-Medium" family="ProximaNovaSoftW03-Medium" pointSize="15"/>
                         <color key="textColor" red="0.54117647058823526" green="0.71764705882352942" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jAu-Pl-I9w" userLabel="Emoticon Label">
-                        <rect key="frame" x="27" y="20" width="40" height="40"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="40" id="D2r-y7-6k8"/>
-                            <constraint firstAttribute="width" constant="40" id="l1J-De-dj8"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="92D-4u-Asc" userLabel="Primary Label">
-                        <rect key="frame" x="82" y="20" width="173" height="20"/>
+                        <rect key="frame" x="75" y="32" width="180" height="16"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="wIF-kC-iYP"/>
+                            <constraint firstAttribute="height" constant="16" id="wIF-kC-iYP"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="ProximaNovaSoftW03-Bold" family="ProximaNovaSoftW03-Bold" pointSize="16"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -96,23 +96,35 @@
                     <constraint firstItem="7h1-73-PQF" firstAttribute="height" secondItem="Puf-S3-x1i" secondAttribute="height" id="8fF-kt-aA1"/>
                     <constraint firstItem="bSO-Ql-iwT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="9cn-Ye-kNR"/>
                     <constraint firstItem="92D-4u-Asc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-10" id="9rW-yL-qIg"/>
+                    <constraint firstItem="kkn-qA-4Bq" firstAttribute="top" secondItem="92D-4u-Asc" secondAttribute="bottom" constant="7" id="Acy-KH-AHY"/>
                     <constraint firstItem="Puf-S3-x1i" firstAttribute="leading" secondItem="kkn-qA-4Bq" secondAttribute="trailing" constant="8" id="GfG-DL-Azx"/>
+                    <constraint firstItem="92D-4u-Asc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="75" id="Hwr-yR-9xz"/>
                     <constraint firstAttribute="trailingMargin" secondItem="7h1-73-PQF" secondAttribute="trailing" id="OSV-Ax-Twf"/>
                     <constraint firstItem="kkn-qA-4Bq" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="10" id="VU5-f3-p3q"/>
                     <constraint firstItem="7h1-73-PQF" firstAttribute="centerY" secondItem="Puf-S3-x1i" secondAttribute="centerY" id="WLr-nZ-VBQ"/>
                     <constraint firstItem="jAu-Pl-I9w" firstAttribute="centerY" secondItem="bSO-Ql-iwT" secondAttribute="centerY" id="aOR-UY-R8J"/>
+                    <constraint firstItem="92D-4u-Asc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="32" id="bJF-Af-QSC"/>
                     <constraint firstItem="U8B-4d-JaB" firstAttribute="centerY" secondItem="bSO-Ql-iwT" secondAttribute="centerY" id="cBC-Fs-dNg"/>
                     <constraint firstItem="U8B-4d-JaB" firstAttribute="centerX" secondItem="bSO-Ql-iwT" secondAttribute="centerX" id="cUf-v9-7nu"/>
                     <constraint firstItem="92D-4u-Asc" firstAttribute="leading" secondItem="bSO-Ql-iwT" secondAttribute="trailing" constant="8" id="dDQ-yo-UCD"/>
                     <constraint firstItem="Mcq-Nq-pFF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="dyK-SO-dFd"/>
                     <constraint firstAttribute="bottom" secondItem="Mcq-Nq-pFF" secondAttribute="bottom" id="eY2-5e-XQw"/>
                     <constraint firstItem="kkn-qA-4Bq" firstAttribute="leading" secondItem="bSO-Ql-iwT" secondAttribute="trailing" constant="8" id="jQG-pr-1Tp"/>
+                    <constraint firstItem="kkn-qA-4Bq" firstAttribute="leading" secondItem="92D-4u-Asc" secondAttribute="leading" id="lcd-gu-08R"/>
                     <constraint firstItem="7h1-73-PQF" firstAttribute="width" secondItem="Puf-S3-x1i" secondAttribute="width" id="oHd-fz-ien"/>
                     <constraint firstItem="jAu-Pl-I9w" firstAttribute="centerX" secondItem="bSO-Ql-iwT" secondAttribute="centerX" id="sOl-QH-usn"/>
                     <constraint firstAttribute="trailing" secondItem="Mcq-Nq-pFF" secondAttribute="trailing" id="uAp-2q-QNp"/>
                     <constraint firstItem="7h1-73-PQF" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="unw-0I-ylW"/>
                     <constraint firstItem="bSO-Ql-iwT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="ySR-cM-B8G"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="9rW-yL-qIg"/>
+                        <exclude reference="dDQ-yo-UCD"/>
+                        <exclude reference="VU5-f3-p3q"/>
+                        <exclude reference="jQG-pr-1Tp"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
