--- a/g5Mindr/g5Mindr/XIBs/MDRReminderList.storyboard
+++ b/g5Mindr/g5Mindr/XIBs/MDRReminderList.storyboard
@@ -179,8 +179,9 @@
                                     <outlet property="delegate" destination="hfW-NC-UkJ" id="MOo-h1-xVF"/>
                                 </connections>
                             </tableView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aAl-m1-EBp">
+                            <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aAl-m1-EBp">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <segue destination="xw8-t4-CIb" kind="embed" id="RY1-TZ-Rht"/>
                                 </connections>
@@ -220,6 +221,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X6d-G5-Mu1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="913.5" y="9.5"/>
         </scene>
     </scenes>
 </document>
